CSS Fix for message alignment

--- a/client/chatstylesheet.css
+++ b/client/chatstylesheet.css
@@ -46,25 +46,34 @@
 
 
 .messageBoxOther, .messageBoxMe {
-    margin-bottom: 10px;
-    margin-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    border-radius: 10px;
+    max-width: 75%;
     display: flex;
-    justify-content: space-between;
-}
-
-.messageBoxOther {
-    margin-right: 50%;
-    background-color: gray;
+    margin: 5px 0px;
 }
 
 .messageBoxMe {
     padding-right: 30px;
-    margin-left: 50%;
+    margin-left: auto;
+    justify-content: end;
+}
+
+.messageBoxOther > ul, .messageBoxMe > ul {
+    border-radius: 10px;
+    margin: 0px;
+    padding: 10px;
+}
+
+
+.messageBoxOther > ul {
+    background-color: gray;
+}
+
+.messageBoxMe > ul {
     background-color: rgb(82, 175, 233);
-    justify-content: flex-end;
+}
+
+.messageBoxMe > ul > li {
+    text-align: end;
 }
 
 ul, li {
